--- a/cra-app/package.json
+++ b/cra-app/package.json
@@ -15,7 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "react-scripts build && rm -rf build/app && mv build app && mkdir build && mv app build/app",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
